--- a/_posts/通用组件/2014-12-19-test.md
+++ b/_posts/通用组件/2014-12-19-test.md
@@ -1,3 +1,7 @@
+---
+layout: post
+---
+
 # 说明
 
 ## 本文档说明
@@ -6,14 +10,8 @@
 ### 文档构建流程
 *	http://www.ruanyifeng.com/blog/2012/08/blogging_with_jekyll.html
 
-### markdown 语法
+### markdown语法
 *	http://www.markdown.cn/
-
-### Liquid 模版语法
-* 	https://github.com/Shopify/liquid/wiki/Liquid-for-Designers
-
-### Jekyll提供的Liquid扩展
-*	https://github.com/jekyll/jekyll/wiki/Liquid-Extensions
 
 ## 前端构建相关学习资料
 
