--- a/_posts/demo/2014-12-19-demo.md
+++ b/_posts/demo/2014-12-19-demo.md
@@ -10,6 +10,8 @@ tags: [github, jekyll]
 ## 本文档说明
 *	采用markdown语法编写，发布在github [查看地址](http://findever.github.io/mall_doc)
 
+<!--more-->
+
 ### 文档构建流程
 *	http://www.ruanyifeng.com/blog/2012/08/blogging_with_jekyll.html
 
