--- a/_posts/demo/2014-12-19-demo.md
+++ b/_posts/demo/2014-12-19-demo.md
@@ -5,7 +5,7 @@ category: demo
 tags: [github, jekyll]
 ---
 
-# 说明
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 ## 本文档说明
 *	采用markdown语法编写，发布在github [查看地址](http://findever.github.io/mall_doc)
@@ -15,8 +15,23 @@ tags: [github, jekyll]
 ### 文档构建流程
 *	http://www.ruanyifeng.com/blog/2012/08/blogging_with_jekyll.html
 
-### markdown语法
+### markdown 语法
 *	http://www.markdown.cn/
+
+### github的部分使用技巧
+*	https://github.com/xuanfeng/github-cheat-sheet/blob/master/README.zh-cn.md
+*	https://help.github.com/articles/github-flavored-markdown/
+
+### Liquid 模版语法
+* 	https://github.com/Shopify/liquid/wiki/Liquid-for-Designers
+
+### Jekyllrb提供的Liquid扩展
+*	https://github.com/jekyll/jekyll/wiki/Liquid-Extensions
+
+### Jekyllrb的中文参考
+*	http://ifindever.com/archives/300.html
+
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 ## 前端构建相关学习资料
 
