--- a/_posts/demo/2014-12-24-test.md
+++ b/_posts/demo/2014-12-24-test.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: Jekyll使用demo
+title: github功能测试
 category: demo
-tags: [github, jekyll]
+tags: [github, test]
 ---
 
 __测试各项功能__
