--- a/_posts/front_components/2014-12-30-global-js.md
+++ b/_posts/front_components/2014-12-30-global-js.md
@@ -5,9 +5,9 @@ category: front_components
 author: "findever"
 ---
 
-__>> 描述全局的js函数及变量  <<__
+## 描述全局的js函数及变量
 <!--more-->
--------------------------------------
+
 * `getSystem()`  
 	__文件__：`modules/common.js`  
 	__描述__：获取当前系统类型，判断为 `ios/android` 以及是否是软件客户端
