--- a/_posts/front_components/2014-12-30-css-files.md
+++ b/_posts/front_components/2014-12-30-css-files.md
@@ -5,9 +5,10 @@ category: front_components
 author: "findever"
 ---
 
-__>> 描述所有css文件 位置及作用 <<__
-<!--more-->
--------------------------------------
+__>> 描述所有css文件 位置及作用__
+<!--more--> 
+
+-------------------------------------  
 * `\style\`  
 	__描述__：存放所有样式文件  
 	`common.css`：通用css样式，用于定义全局性样式  
