--- a/_posts/front_components/2014-12-30-js-files.md
+++ b/_posts/front_components/2014-12-30-js-files.md
@@ -5,9 +5,9 @@ category: front_components
 author: "findever"
 ---
 
-__>> 描述所有js文件 位置及作用 <<__
+## 描述所有js文件 位置及作用
 <!--more-->
--------------------------------------
+
 * `\modules\`  
 	__描述__：存放js库  
 	`common.js`：通用js库，用于处理一些兼容性问题及提供通用函数  
